cmake_minimum_required(VERSION 3.25)
project(C_Project C)

set(CMAKE_C_STANDARD 99)

add_executable(C_Project 4_16/main.c 4_16/清空输入缓存区.c 4_16/清空输入缓存区.c 4_16/for循环练习.c 4_16/do_while练习.c 4_16/do_while练习.c 4_16/计算n的阶乘.c 4_16/阶乘相加.c 4_16/二分查找法.c 4_16/字符向中间汇聚.c 4_16/输入密码.c 4-17/习题1_判断输出结果.c 4-17/三个数从小到大输出.c 4-17/1-100中3的倍数.c 4-17/两个数的最大公约数.c 4-17/1000-2000之间的闰年.c 4-17/100-200之间的素数.c 4-17/数9的个数.c 4-17/分数求和.c 4-17/求最大值.c 4-17/99乘法表.c test_1.c 4-17/二分查找.c 4-17/猜数字游戏.c 4-17/goto电脑关机.c 4-18/copy函数.c 4-18/memset函数.c 4-18/数字交换_指针.c 4-18/数字交换.c 4-18/test_素数.c 4-18/test_闰年.c 4-18/test_二分查找法.c 4-18/test_调用值就加1.c 4-18/函数的嵌套调用.c 4-18/printf_test.c 4-18/strcat函数.c 4-18/链式访问.c 4-18/add.h 4-18/add.c 4-18/test_add.c)
